syntax = "proto3";

option go_package = "github.com/kytruong0712/goffee-shop/api-gateway/internal/gateway/user/protobuf";

import "enum.proto";
import "timestamppb/timestamp.proto";
import "date/date.proto";

service User {
  rpc SignupAccount(SignupAccountRequest) returns (SignupAccountResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc CreateOTP(CreateOTPRequest) returns (CreateOTPResponse);
  rpc ActivateUser(ActivateUserRequest) returns (ActivateUserResponse);
  rpc UpdateUserProfile(UpdateUserProfileRequest) returns (UpdateUserProfileResponse);
}

message SignupAccountRequest {
  string full_name = 1 [json_name = "full_name"];
  string phone_number = 2 [json_name = "phone_number"];
  string password = 3 [json_name = "password"];
}

message UpdateUserProfileRequest {
  int64 iam_id = 1 [json_name = "iam_id"];
  string email = 2 [json_name = "email"];
  GenderType gender = 3 [json_name = "gender"];
  google.type.Date date_of_birth = 4 [json_name = "date_of_birth"];
}

message SignupAccountResponse {
  UserData data = 1 [json_name = "data"];
}

message UpdateUserProfileResponse {
  UserProfileData data = 1 [json_name = "data"];
}

message UserData {
  int64 iam_id = 1 [json_name = "iam_id"];
  string full_name = 2 [json_name = "full_name"];
  string phone_number = 3 [json_name = "phone_number"];
  UserStatus status = 4 [json_name = "status"];
  google.protobuf.Timestamp created_at = 5 [json_name = "created_at"];
  google.protobuf.Timestamp updated_at = 6 [json_name = "updated_at"];
}

message UserProfileData {
  int64 iam_id = 1 [json_name = "iam_id"];
  string email = 2 [json_name = "email"];
  GenderType gender = 3 [json_name = "gender"];
  google.type.Date date_of_birth = 4 [json_name = "date_of_birth"];
  google.protobuf.Timestamp created_at = 5 [json_name = "created_at"];
  google.protobuf.Timestamp updated_at = 6 [json_name = "updated_at"];
}

message CreateOTPRequest {
  int64 iam_id = 1 [json_name = "iam_id"];
  string phone_number = 2 [json_name = "phone_number"];
  string country_code = 3 [json_name = "country_code"];
}

message CreateOTPResponse {
  string status = 1 [json_name = "status"];
  string message = 2 [json_name = "message"];
}

message LoginRequest {
  string phone_number = 1 [json_name = "phone_number"];
  string password = 2 [json_name = "password"];
}

message LoginResponse {
  int64 iam_id = 1 [json_name = "iam_id"];
  string token = 2 [json_name = "token"];
}

message ActivateUserRequest {
  string phone_number = 1 [json_name = "phone_number"];
  string otp = 2 [json_name = "otp"];
}

message ActivateUserResponse {
  string status = 1 [json_name = "status"];
  string message = 2 [json_name = "message"];
}
